enum-str-conv/tests/ui/compile_fail_3.rs
fn main() {
    #[derive(enum_str_conv::EnumStrConv)]
    #[enum_str_conv]
    enum MyEnum {
        #[enum_str_conv(str = "apple")]
        A,
    }
}
